list item - card item

--- a/src/app/list-items/list-items.html
+++ b/src/app/list-items/list-items.html
@@ -1,1 +1,7 @@
-<p>list-items works!</p>
+<h1>Lista de empleados</h1>
+<div>
+    <app-card-item></app-card-item>
+    <app-card-item></app-card-item>
+    <app-card-item></app-card-item>
+    <app-card-item></app-card-item>
+</div>
