--- a/src/app/card-item/card-item.html
+++ b/src/app/card-item/card-item.html
@@ -1,10 +1,11 @@
 <div class="card">
-    <img src="assets/img_avatar_chico.png" alt="Avatar" style="width: 80%;">
+    <img src="{{employee.iconUrl}}" alt="Avatar" style="width: 80%;">
     <div class="container">
-        <h4>Diego Antón</h4>
-        <p>Developer</p>
+        <h4>{{employee.name}}</h4>
+        <p>{{employee.role}}</p>
     </div>
     <div>
-        <span class="junior">Necesita soporte</span>
+        <!--<span class="junior">Necesita soporte</span>-->
     </div>
+    <button (click)="onEmployeeSelected()">Select Employee</button>
 </div>
