--- a/src/app/list-items/list-items.html
+++ b/src/app/list-items/list-items.html
@@ -1,7 +1,8 @@
 <h1>Lista de empleados</h1>
 <div>
-    <app-card-item></app-card-item>
-    <app-card-item></app-card-item>
-    <app-card-item></app-card-item>
-    <app-card-item></app-card-item>
+    <app-card-item (employeeSelected)="onEmployeeSelected($event)" [employee]="firstEmployee"></app-card-item>
+    <app-card-item (employeeSelected)="onEmployeeSelected($event)" [employee]="secondEmployee"></app-card-item>
+    <app-card-item (employeeSelected)="onEmployeeSelected($event)" [employee]="thirdEmployee"></app-card-item>
+    <app-card-item (employeeSelected)="onEmployeeSelected($event)" [employee]="fourthEmployee"></app-card-item>
 </div>
+<h4>Empleado seleccionado: <span>{{selectedEmployee.name}}</span></h4>
