--- a/src/app/landingpage/landingpage.html
+++ b/src/app/landingpage/landingpage.html
@@ -1,2 +1,4 @@
 <button (click)="onRedirect('helpcenter')">Help Center</button>
 <button (click)="onRedirect('employees-list')">Employees List</button>
+<button (click)="onRedirect('testing-directives')">Testing Directives</button>
+
